--- a/src/app/Componentes/componente-b/componente-b.component.html
+++ b/src/app/Componentes/componente-b/componente-b.component.html
@@ -1,5 +1,38 @@
-<p>Estoy en la segunda</p>
 
+<header class="cabeza"><h1 id="titulo">Datos Personales</h1></header>
+<main class="principal">
+    
+    <table class="tabla">
+    
+        <tr>
+        <td>Nombres</td>
+          <td>Pablo Fernando</td>
+          <td class="imagen" rowspan="5"><img src="\Imagenes\Laimagen.jpeg">
+        </tr>
+        <tr>
+          <td>Apellidos</td>
+          <td>Feijo Bacuilima</td>
+          
+        </tr>
+        <tr>
+          <td>Edad</td>
+          <td>17 años</td>
+          
+        </tr>
+        <tr> 
+            <td>Fecha de Nacimiento</td>
+            <td>30 de Agosto de 2005</td>
+            
+        </tr>
+        <tr> 
+            <td>Altura</td>
+            <td>1.74 centimetros</td>
+            
+        </tr>
+      </table>
+</main>
+
+<button (click)="irApagina1()">Pagina 1</button>
 <button (click)="irApagina()">Pagina 2</button>
 <button (click)="irApagina3()">Pagina 3</button>
 <button (click)="irApagina4()">Pagina 4</button>
