--- a/src/app/Componentes/componente-c/componente-c.component.html
+++ b/src/app/Componentes/componente-c/componente-c.component.html
@@ -1,5 +1,37 @@
-<h1>PAGINA 3</h1>
-
+<header class="cabeza"><h1 id="titulo">Gustos Personales</h1></header>
+<main class="principal">
+    
+    <table class="tabla">
+    
+        <tr>
+        <td>Comida Favorita</td>
+        <td>Pizza</td>
+        <td id="fotos" rowspan="5"><img src="https://static.vecteezy.com/system/resources/previews/002/075/207/non_2x/like-and-love-icon-6-free-vector.jpg" alt="PIZZA" class="imagen"> </td>
+         
+        </tr>
+        <tr>
+          <td>Bebida Favorita</td>
+          <td>Yogurt de Mora</td>
+          
+        </tr>
+        <tr>
+          <td>Juego Favorito</td>
+          <td>Valorant</td>
+          
+        </tr>
+        <tr> 
+            <td>Color Favorito</td>
+            <td>Morado</td>
+            
+        </tr>
+        <tr> 
+            <td>Deporte Favorito</td>
+            <td>Futbol</td>
+            
+        </tr>
+      </table>
+</main>
+<button (click)="irApagina1()">Pagina 1</button>
 <button (click)="irApagina()">Pagina 2</button>
 <button (click)="irApagina3()">Pagina 3</button>
 <button (click)="irApagina4()">Pagina 4</button>
