--- a/src/app/Componentes/componente-d/componente-d.component.html
+++ b/src/app/Componentes/componente-d/componente-d.component.html
@@ -1,1 +1,5 @@
-<p>componente-d works!</p>
+<head class="cabeza"><h1>Gustos personales</h1></head>
+<button (click)="irApagina1()">Pagina 1</button>
+<button (click)="irApagina()">Pagina 2</button>
+<button (click)="irApagina3()">Pagina 3</button>
+<button (click)="irApagina4()">Pagina 4</button>
