--- a/src/app/Componentes/componente-a/componente-a.component.html
+++ b/src/app/Componentes/componente-a/componente-a.component.html
@@ -1,5 +1,6 @@
-<h1>PAGINA PRINCIPAL</h1>
-
+<h1>Mi Blog</h1>
+ 
+<button (click)="irApagina1()">Pagina 1</button>
 <button (click)="irApagina()">Pagina 2</button>
 <button (click)="irApagina3()">Pagina 3</button>
 <button (click)="irApagina4()">Pagina 4</button>
