Creacion de variables

--- a/src/app/Componentes/componente-a/componente-a.component.html
+++ b/src/app/Componentes/componente-a/componente-a.component.html
@@ -1,6 +1,23 @@
-<h1>Mi Blog</h1>
- 
-<button (click)="irApagina1()">Pagina 1</button>
+<header>
+    <img src="C:\Users\pablo\OneDrive\Imágenes\Imagenes\Laimagen.jpeg" alt="Perfil">
+    <h1 class="head">Mi Blog</h1>   
+    <nav class="nav">
+        <button (click)="irApagina1()">Pagina 1</button>
 <button (click)="irApagina()">Pagina 2</button>
 <button (click)="irApagina3()">Pagina 3</button>
 <button (click)="irApagina4()">Pagina 4</button>
+    </nav>
+      
+
+</header>
+<body>
+  <p>Ingrese nombre</p><br>
+ 
+</body>
+<div>
+    <p>{{suma}}</p>
+    <p>{{suma2}}</p>
+   
+</div>
+
+
