--- a/src/app/Componentes/componente-a/componente-a.component.css
+++ b/src/app/Componentes/componente-a/componente-a.component.css
@@ -1,9 +1,6 @@
-
-.head{
- text-align: center;
- background-color:antiquewhite ;    
+h1{
+    text-align: center;
 }
-.nav{
-    text-align: right;
-    background-color: aqua;
+body{
+
 }
